2006-02-26  Karsten Dambekalns  <karsten@typo3.org>

	* Extension Manager: Fixed bug #2630 (thanks Peter Niederlag), #2610, #2607, #1904 (partly), #2579
	* Extension Manager: Fixed checking of review states (thanks Rupert Germann)
	* Extension Manager: Now the EM shows update icons again
	* Extension Manager: Dependency handling has been reworked, now it is much more comfortable, fixes #1607 (partly), #2584
	* class.t3lib_befunc.php: Fixed bug #2528
	* class.tslib_content.php: Fixed bug #2676

2006-02-26  Wolfgang Klinger  <wk@plan2.net>

	* Fixed bug #1060: Sitemap with SectionIndex does not display content header when page has a navigation title assigned
	* Fixed bug #284: substUrlsInPlainText does not allow other characters than space and () to terminate URLs in the text.
	* Fixed bug #2543: tslib_div uses deprecated function call_user_method
	* Fixed bug #1827: Empty page tree after deleting the current temporary page mount.

2006-02-25  Ingmar Schlecht  <ingmar@typo3.org>

	* Added an "upload" and "new" button to the filelist module (Gremlin #1599, thanks to Stefano Cecere for the patch)

2006-02-23  Ingmar Schlecht  <ingmar@typo3.org>

	* Changed formURL in fe_adminLib.inc to always contain a question mark "?" because in the templates the formurl marker is used like ###FORM_URL###&cmd=edit which didn't work if the URL didn't contain a question mark like in simulStatic- or RealURLs. This fixes typo3.org bug #2563.

2006-02-23  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Remove RTE-enabling defaultExtras off tt_content bodytext (related to bug #2023).
	* Fix bugtracker issue 2656 in htmlArea RTE.

2006-02-23  Rene Fritz  <r.fritz@colorcube.de>

	* Fixed bug #2662: added check against "Limit to languages"

2006-02-23  Kasper Skaarhoj  <kasperYYYY@typo3.com>

	* Changed things related to locallang-XML handling. Most significantly is it that translations are looked for in the new language pack directories typo3conf/l10n/[langyage key]/.